fixing report cards not fitting on one page

--- a/src/app/print-report-card/print-report-card.component.scss
+++ b/src/app/print-report-card/print-report-card.component.scss
@@ -7,7 +7,7 @@
 
 .page { width: 11in; min-width: 11in; height: 8.2in; min-height: 8.2in; max-height: 8.2in; }
 .pageTable { margin: 0.125in 0.5in 0.25in 0.25in; padding: 0; }
-.page2Table { margin: 0.25in; padding: 0; }
+.page2Table { margin: 0.25in; padding: 0; height: 8in; min-height: 8in; max-height: 8in; }
 
 h3.coachCommentsTop { margin: 0; }
 
@@ -103,16 +103,17 @@ table.rankTable tr td { border: 1px solid black; }
 .eventName { 
     white-space: nowrap; 
     text-align: center;
-    max-width: 0.5in; 
-    width: 0.5in;
+    max-width: 0.35in; 
+    width: 0.35in;
+    min-width: 0.35in; 
 }
 td.eventName > div { transform: rotate(180deg); }
 .vertical-text { writing-mode: vertical-rl; }
 
 .shading { background-color: lightgray; -webkit-print-color-adjust: exact; }
-.spacing { min-width: 0.25in; max-width: 0.25in; font-size: x-small; font-weight: bold; text-align: center; }
-.skill { max-width: 1.25in; min-width: 1.25in; height: 0.35in; font-size: x-small; padding-left: 0.1in; }
-.levelName { font-size: small; font-weight: bold; text-align: center; }
+.spacing { min-width: 0.20in; max-width: 0.20in; font-size: x-small; font-weight: bold; text-align: center; }
+.skill { max-height: 0.35in; font-size: xx-small; padding-left: 0.05in; padding-right: 0.05in; }
+.levelName { min-height: 0.35in; height: 0.35in; max-height: 0.35in; font-size: small; font-weight: bold; text-align: center; }
 
 .legend { font-size: large; text-align: center; }
 .note { font-size: small; text-align: center; }
